<resources>
    <string name="app_name">TheoMusicApp</string>
    <string name="artistBox">Artists</string>
    <string name="albumBox">Albums</string>
    <string name="songsBox">Songs</string>
    <string name="nowPlaying">Now playing</string>
    <string name="playlists">PlayLists</string>
    <string name="appInfo">App info</string>
    <string name="nowPlayingText">In this view you can listen to your favourite song and perform simple actions on it. This activity would include implementing MediaPlayer class with constructorMediaPlayer madiaPlayer= new MediaPlayer(); . This class is initialized in this activity and uses AudioManager to manage sources of the audio files. The MediaPlayer.start() is initialized when User clicks the play ImageView. Start/Stop depends of the Paused boolean state. MediaPlayer is connected to the SeekBar with usage of max Duration. A handler is then setting the position on the SeekBar.</string>
    <string name="openingNowPlaying">Opening Now Playing option</string>
    <string name="openingPlayList">Opening Play List option</string>
    <string name="openingArtists">Opening Artists option</string>
    <string name="openingAlbums">Opening Albums option</string>
    <string name="openingSongs">Opening Songs option</string>
    <string name="openingAppInfo">Opening App Info option</string>
    <string name="playListText">In this view you can customize your playlists and play them! In now playing window you will be able to add certain song to your playlists</string>
    <string name="artistsText">Select songs to play categorised by your favourite artist. The AudioManager class sources your audio and this view groups them by Artists.</string>
    <string name="albumsText">All your albums can be viewed on this screen. This view uses AudioManager class and groups them to the same album. </string>
    <string name="songsText">No filters! All your music storage here! AudioManager class displays all sources in this view.</string>
    <string name="appInfoText">theoMusicApp is brought to you by \ntheoCoding \u00A9 2017 \nThank you for downloading and please Rate my app!</string>
</resources>
