<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/generalBackground"
    tools:context="com.example.a.theomusicapp.SongsActivity">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nowPlayingS"
                style="@style/boxStyleOdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nowPlaying"
                />

            <TextView
                android:id="@+id/playListS"
                style="@style/boxStyleOdd"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/playlists"
                />

            <TextView
                android:id="@+id/artistsS"
                style="@style/boxStyleOdd"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/artistBox"
                />

            <TextView
                android:id="@+id/albumsS"
                style="@style/boxStyleOdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/albumBox"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/songsBox"
                style="@style/boxStyleOdd"
                android:id="@+id/songsS"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/appInfo"
                style="@style/boxStyleOdd"
                android:id="@+id/appInfoS"/>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nowPlayingText"
        style="@style/infoBox"/>
</LinearLayout>
