<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/generalBackground"
    tools:context="com.example.a.theomusicapp.NowPlayingActivity">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:id="@+id/navigationBarMini">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/nowPlayingNP"
                style="@style/boxStyleOdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/nowPlaying"
                android:textColor="@color/colorAccent"/>

            <TextView
                android:id="@+id/playListNP"
                style="@style/boxStyleOdd"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/playlists" />

            <TextView
                android:id="@+id/artistsNP"
                style="@style/boxStyleOdd"

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/artistBox" />

            <TextView
                android:id="@+id/albumsNP"
                style="@style/boxStyleOdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/albumBox" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/songsBox"
                style="@style/boxStyleOdd"
                android:id="@+id/songsNP"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="@string/appInfo"
                style="@style/boxStyleOdd"
                android:id="@+id/appInfoNP"/>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nowPlayingText"
        style="@style/infoBox"
        android:layout_below="@id/navigationBarMini"
        android:id="@+id/playingInfoBox"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"/>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="15"
        android:id="@+id/seekBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/playingStatus"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/playingStatus"
        android:layout_marginBottom="20dp"
        android:clickable="true">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_first_page_black_24dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_black_64dp"
            android:layout_weight="1"
            android:id="@+id/play_pause"
            android:clickable="true"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_last_page_black_64dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_playlist_add_black_64dp"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
